--- a/odoo/charts/postgresql/templates/secrets.yaml
+++ b/odoo/charts/postgresql/templates/secrets.yaml
@@ -9,4 +9,4 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  postgres-password: {{ default "" .Values.postgresPassword | b64enc | quote }}
+  postgresql-password: {{ default "" .Values.postgresqlPassword | b64enc | quote }}
