--- a/rabbitmq/templates/secrets.yaml
+++ b/rabbitmq/templates/secrets.yaml
@@ -10,4 +10,4 @@ metadata:
 type: Opaque
 data:
   rabbitmq-password: {{ default "" .Values.rabbitmqPassword | b64enc | quote }}
-  rabbitmq-erlangcookie: {{ default "" .Values.rabbitmqErlangcookie | b64enc | quote }}
+  rabbitmq-erlang-cookie: {{ default "" .Values.rabbitmqErlangCookie | b64enc | quote }}
