--- a/odoo/templates/deployment.yaml
+++ b/odoo/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: {{ template "postgresql.fullname" . }}
-              key: postgres-password
+              key: postgresql-password
         - name: ODOO_EMAIL
           value: {{ default "" .Values.odooEmail | quote }}
         - name: ODOO_PASSWORD
