--- a/tomcat/templates/deployment.yaml
+++ b/tomcat/templates/deployment.yaml
@@ -22,8 +22,8 @@ spec:
         image: "bitnami/tomcat:{{ .Values.imageTag }}"
         imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
-        - name: TOMCAT_USER
-          value: {{ default "" .Values.tomcatUser | quote }}
+        - name: TOMCAT_USERNAME
+          value: {{ default "" .Values.tomcatUsername | quote }}
         - name: TOMCAT_PASSWORD
           valueFrom:
             secretKeyRef:
