--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -57,3 +57,8 @@ wordpressBlogName: User's Blog!
   ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
   ##
   # mariadbRootPassword:
+
+## Kubernetes configuration
+## For minikube, set this to NodePort, elsewhere use LoadBalancer
+##
+serviceType: LoadBalancer
