--- a/drupal/values.yaml
+++ b/drupal/values.yaml
@@ -32,3 +32,8 @@ drupalEmail: user@example.com
   ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
   ##
   # mariadbRootPassword:
+
+## Kubernetes configuration
+## For minikube, set this to NodePort, elsewhere use LoadBalancer
+##
+serviceType: LoadBalancer
