Add persistence to Redmine chart

--- a/redmine/templates/deployment.yaml
+++ b/redmine/templates/deployment.yaml
@@ -75,4 +75,9 @@ spec:
           mountPath: /bitnami/redmine
       volumes:
       - name: redmine-data
+      {{- if .Values.persistence.enabled }}
+        persistentVolumeClaim:
+          claimName: {{ template "fullname" . }}
+      {{- else }}
         emptyDir: {}
+      {{- end -}}
