README, NOTES.txt, values.yaml updates and fixes
For Redmine, Drupal and WordPress

General:
- Wordpress -> WordPress

READMEs:
- Add persistence configuration values
- Update persistence sections to describe Persistent Volume Claim usage

NOTES.txt:
- Fixes `kubectl` command for retrieving URL for ClusterIP service type
- Use root (homepage) URLs instead of login URLs
- Fix forwarding commands for ClusterIP service type, and use
  unprivileged port
- Improve LoadBalancer note printout
- Improve credentials printout

values.yaml:
- redmineUser -> redmineUsername
- drupalUser -> drupalUsername

--- a/redmine/values.yaml
+++ b/redmine/values.yaml
@@ -1,18 +1,20 @@
 ## Bitnami Redmine image version
 ## ref: https://hub.docker.com/r/bitnami/redmine/tags/
 ##
-imageTag: 3.3.0-r2
+image:
+  repo: bitnami/redmine
+  tag: 3.3.0-r2
 
-## Specify a imagePullPolicy
-## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
-## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-##
-# imagePullPolicy:
+  ## Specify a imagePullPolicy
+  ## Defaults to 'Always' if image.tag is 'latest', else set to 'IfNotPresent'
+  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+  ##
+  # pullPolicy:
 
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
 ##
-redmineUser: user
+redmineUsername: user
 
 ## Application password
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
