--- a/drupal/templates/deployment.yaml
+++ b/drupal/templates/deployment.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
       - name: {{ template "fullname" . }}
-        image: "bitnami/drupal:{{ .Values.imageTag }}"
-        imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
+        image: "{{ .Values.image.repo }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ default "" .Values.image.pullPolicy | quote }}
         env:
         - name: MARIADB_HOST
           value: {{ template "mariadb.fullname" . }}
@@ -32,7 +32,7 @@ spec:
               name: {{ template "mariadb.fullname" . }}
               key: mariadb-root-password
         - name: DRUPAL_USERNAME
-          value: {{ default "" .Values.drupalUser | quote }}
+          value: {{ default "" .Values.drupalUsername | quote }}
         - name: DRUPAL_PASSWORD
           valueFrom:
             secretKeyRef:
