--- a/redmine/templates/deployment.yaml
+++ b/redmine/templates/deployment.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
       - name: {{ template "fullname" . }}
-        image: "bitnami/redmine:{{ .Values.imageTag }}"
-        imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
+        image: "{{ .Values.image.repo }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ default "" .Values.image.pullPolicy | quote }}
         env:
         - name: MARIADB_HOST
           value: {{ template "mariadb.fullname" . }}
@@ -32,7 +32,7 @@ spec:
               name: {{ template "mariadb.fullname" . }}
               key: mariadb-root-password
         - name: REDMINE_USERNAME
-          value: {{ default "" .Values.redmineUser | quote }}
+          value: {{ default "" .Values.redmineUsername | quote }}
         - name: REDMINE_PASSWORD
           valueFrom:
             secretKeyRef:
