--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -1,13 +1,15 @@
-## Bitnami Wordpress image version
+## Bitnami WordPress image version
 ## ref: https://hub.docker.com/r/bitnami/wordpress/tags/
 ##
-imageTag: 4.6.1-r1
+image:
+  repo: bitnami/wordpress
+  tag: 4.6.1-r1
 
-## Specify a imagePullPolicy
-## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
-## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-##
-# imagePullPolicy:
+  ## Specify a imagePullPolicy
+  ## Defaults to 'Always' if image.tag is 'latest', else set to 'IfNotPresent'
+  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+  ##
+  # pullPolicy:
 
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-wordpress#environment-variables
