--- a/drupal/values.yaml
+++ b/drupal/values.yaml
@@ -1,18 +1,10 @@
 ## Bitnami Drupal image version
 ## ref: https://hub.docker.com/r/bitnami/drupal/tags/
 ##
-image:
-  repo: bitnami/drupal
-  tag: 8.1.9-r0
-
-  ## Specify a imagePullPolicy
-  ## Defaults to 'Always' if image.tag is 'latest', else set to 'IfNotPresent'
-  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-  ##
-  # pullPolicy:
+image: bitnami/drupal:8.1.9-r0
 
 ## Specify a imagePullPolicy
-## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
 # imagePullPolicy:
