--- a/redmine/values.yaml
+++ b/redmine/values.yaml
@@ -1,15 +1,13 @@
 ## Bitnami Redmine image version
 ## ref: https://hub.docker.com/r/bitnami/redmine/tags/
 ##
-image:
-  repo: bitnami/redmine
-  tag: 3.3.0-r2
+image: bitnami/redmine:3.3.0-r2
 
-  ## Specify a imagePullPolicy
-  ## Defaults to 'Always' if image.tag is 'latest', else set to 'IfNotPresent'
-  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-  ##
-  # pullPolicy:
+## Specify a imagePullPolicy
+## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
 
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
