--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -1,15 +1,13 @@
 ## Bitnami WordPress image version
 ## ref: https://hub.docker.com/r/bitnami/wordpress/tags/
 ##
-image:
-  repo: bitnami/wordpress
-  tag: 4.6.1-r1
+image: bitnami/wordpress:4.6.1-r1
 
-  ## Specify a imagePullPolicy
-  ## Defaults to 'Always' if image.tag is 'latest', else set to 'IfNotPresent'
-  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-  ##
-  # pullPolicy:
+## Specify a imagePullPolicy
+## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
 
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-wordpress#environment-variables
