--- a/ghost/templates/deployment.yaml
+++ b/ghost/templates/deployment.yaml
@@ -65,17 +65,19 @@ spec:
         livenessProbe:
           exec:
             command:
-            - nami
-            - status
-            - ghost
+            - nc
+            - -z
+            - localhost
+            - "2368"
           initialDelaySeconds: 120
           timeoutSeconds: 5
         readinessProbe:
           exec:
             command:
-            - nami
-            - status
-            - ghost
+            - nc
+            - -z
+            - localhost
+            - "2368"
           initialDelaySeconds: 5
           timeoutSeconds: 1
         volumeMounts:
