--- a/prestashop/templates/deployment.yaml
+++ b/prestashop/templates/deployment.yaml
@@ -67,17 +67,19 @@ spec:
         livenessProbe:
           exec:
             command:
-            - nami
-            - status
-            - apache
+            - nc
+            - -z
+            - localhost
+            - "80"
           initialDelaySeconds: 120
           timeoutSeconds: 5
         readinessProbe:
           exec:
             command:
-            - nami
-            - status
-            - apache
+            - nc
+            - -z
+            - localhost
+            - "80"
           initialDelaySeconds: 5
           timeoutSeconds: 1
         volumeMounts:
