mongodb: allow users to configure resource requests and limits

--- a/incubator/mongodb/templates/deployment.yaml
+++ b/incubator/mongodb/templates/deployment.yaml
@@ -54,6 +54,8 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /bitnami/mongodb
+        resources:
+{{ toYaml .Values.resources | indent 10 }}
       volumes:
       - name: data
       {{- if .Values.persistence.enabled }}
