--- a/incubator/mongodb/values.yaml
+++ b/incubator/mongodb/values.yaml
@@ -33,3 +33,11 @@ persistence:
   storageClass: generic
   accessMode: ReadWriteOnce
   size: 8Gi
+
+## Configure resource requests and limits
+## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+##
+resources:
+  requests:
+    memory: 256Mi
+    cpu: 100m
