--- a/incubator/phabricator/Chart.yaml
+++ b/incubator/phabricator/Chart.yaml
@@ -15,7 +15,7 @@ keywords:
 - git
 - mercurial
 - subversion
-home: https://www.phacility.com/phabricator
+home: https://www.phacility.com/phabricator/
 sources:
 - https://github.com/bitnami/bitnami-docker-phabricator
 maintainers:
