--- a/incubator/owncloud/values.yaml
+++ b/incubator/owncloud/values.yaml
@@ -1,7 +1,7 @@
 ## Bitnami ownCloud image version
 ## ref: https://hub.docker.com/r/bitnami/owncloud/tags/
 ##
-imageTag: 9.1.1-r2
+imageTag: 9.1.2-r0
 
 ## Specify a imagePullPolicy
 ## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
@@ -27,7 +27,7 @@ owncloudUsername: user
 ## Application password
 ## ref: https://github.com/bitnami/bitnami-docker-owncloud#configuration
 ##
-owncloudPassword: bitnami1
+owncloudPassword: bitnami
 
 ## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-owncloud#configuration
