--- a/incubator/cassandra/Chart.yaml
+++ b/incubator/cassandra/Chart.yaml
@@ -1,6 +1,6 @@
 name: cassandra
 version: 0.0.1
-description: Apache Cassandra is a free and open-source distributed database management system designed to handle large amounts of data across many commodity servers or datacenters.
+description: Apache Cassandra is a free and open-source distributed database management system designed to handle large amounts of data across many commodity servers or datacenters
 keywords:
 - database
 - nosql
