--- a/incubator/cassandra/templates/pvc.yaml
+++ b/incubator/cassandra/templates/pvc.yaml
@@ -1,13 +1,14 @@
+{{- if .Values.persistence.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ template "fullname" . }}
   annotations:
-    volume.alpha.kubernetes.io/storage-class: "generic"
+    volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.storageClass | quote }}
 spec:
   accessModes:
-    - "ReadWriteOnce"
+    - {{ .Values.persistence.accessMode | quote }}
   resources:
     requests:
-      storage: "8Gi"
-
+      storage: {{ .Values.persistence.size | quote }}
+{{- end }}
