--- a/incubator/moodle/Chart.yaml
+++ b/incubator/moodle/Chart.yaml
@@ -3,9 +3,9 @@ version: 0.0.1
 description: Moodle is a learning platform designed to provide educators, administrators and learners with a single robust, secure and integrated system to create personalised learning environments
 keywords:
 - moodle
-- lms
-- http
+- learning
 - php
+- mariadb
 home: http://www.moodle.org/
 sources:
 - https://github.com/bitnami/bitnami-docker-moodle
