initial version of Node Chart

--- a/incubator/node/Chart.yaml
+++ b/incubator/node/Chart.yaml
@@ -5,6 +5,7 @@ keywords:
 - node
 - javascript 
 - nodejs
+- git
 home: http://nodejs.org/
 sources:
 - https://github.com/bitnami/bitnami-docker-node
