--- a/incubator/cassandra/templates/pvc.yaml
+++ b/incubator/cassandra/templates/pvc.yaml
@@ -2,7 +2,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "fullname" . }}-data
   annotations:
     volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.storageClass | quote }}
 spec:
